# pydidit2-cli

./: .gitignore  README.md  pyproject.toml
pydiditcli/: __init__.py  presentation.py
