[project]
name = "pydidit2-cli"
version = "0.1.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "Adam J. Lincoln", email = "adamjlincoln@gmail.com" },
]
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pydidit2-backend @ git+https://github.com/adamlincoln/pydidit2-backend.git",
]

[project.scripts]
pydidit-cli = "pydiditcli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "pydiditcli" },
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-randomly = "^3.16.0"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "EXE002",
]
